# study-note

./: 404.html  README.md  index.html  mkdocs-config.md  mkdocs.yml  requirements.txt
docs/rust-study/: Cargo.toml  README.md
docs/rust-study/01-rust-setup/: faster-linking.md  setup-rust-env.md
docs/rust-study/02-quick-start/: quick-start.md
docs/rust-study/03-programming-concepts/: 1-variable-and-mutability.md  2-data-types.md  3-flow-controls.md  4-collections.md
docs/rust-study/04-ownership/: 1-ownership.md  2-borrow.md
docs/rust-study/05-structuring-rust-code/: 04-struct-impl.md  1-functions.md  2-nested-functions.md  3-defining-and-instantiating-structs.md
docs/rust-study/06-enum-and-pattern-matching/: 1-enum.md  2-channel.md
docs/rust-study/07-modules/: 1-mod.md  2-mod-and-filesystem.md  test-functions.md
docs/rust-study/08-common-collections/: 01-collections.md
docs/rust-study/09-error-handling/: 1-option-and-result.md  2-rust-error.md
docs/rust-study/10-generic-type-traits-lifetimes/: Injection.md  generics.md  store_a_trait_in_a_struct.md  traits.md  type_chameleon.md
docs/rust-study/12-io-projects/: confluent-kafka.md
docs/rust-study/13-functional-programming/: oop.md
docs/rust-study/14-smart-pointer/: smart-pointer.md
docs/rust-study/15-concurrency/: concurrency.md  tokio-concurrency.md
docs/rust-study/16-ioc/: 1-trait-impl.md
docs/rust-study/20-aws-lambda/: 1-rust-on-aws-lambda.md  2-rust-in-aws-lambda.md
docs/rust-study/21-unit-test/: 01-unit-test.md  02-mocking.md
docs/rust-study/22-project-organization/: layer-design.md  (+1 more)
(+546 files in other folders)
