[package]
name = "rust-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.17" }
mockall = { version = "0.12.1" }
simple_logger = { version = "5.0.0" }
tokio = { version = "1.28.1", features = ["full"] }